<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/btn_add_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pop_img_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:fontFamily="monospace" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="356dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/btn_save_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pop_save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:fontFamily="monospace" android:textStyle="bold"
            android:layout_marginTop="544dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="169dp"
            android:layout_height="169dp" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/pop_img" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/pop_img_btn"
            app:layout_constraintVertical_bias="0.394"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/pop_name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pop_img_btn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/pop_save_btn" android:hint="@string/txt_name_hint"
            android:fontFamily="monospace"/>
</android.support.constraint.ConstraintLayout>