<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/starsky"
        tools:context=".activity.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="Image of user"
            android:src="@drawable/userimg"
            android:id="@+id/circleImgView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_capture_photo" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.591"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/yellow"/>

    <Button
            android:text="@string/btn_start_quiz"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:id="@+id/btn_start_quiz"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.495" android:fontFamily="monospace" android:textStyle="bold"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="570dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            tools:ignore="MissingConstraints" android:textColor="@color/text_dark_grey"/>

    <Button
            android:text="@string/btn_go_to_archive"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:id="@+id/btn_save_person"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:fontFamily="monospace" android:textStyle="bold"
            android:textSize="18sp" android:layout_marginTop="8dp"
            android:drawableLeft="@android:drawable/ic_menu_search"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_quiz" app:layout_constraintVertical_bias="1.0"
            android:textColor="@color/text_dark_grey"/>

    <Button
            android:background="@android:drawable/ic_menu_edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@id/img_card"
            android:layout_alignTop="@id/btn_delete_card"
            android:id="@+id/btn_edit_username"

            app:layout_constraintStart_toEndOf="@+id/textview_username"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/btn_capture_photo"
            app:layout_constraintBottom_toBottomOf="@+id/textview_username" app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintVertical_bias="1.0" android:layout_marginBottom="4dp"/>
    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:layout_editor_absoluteY="167dp"
            tools:layout_editor_absoluteX="243dp"
            android:id="@+id/FAB_edit_picture"
            app:backgroundTint="@color/yellow"
            app:maxImageSize="35dp"
            app:borderWidth="0dp" tools:ignore="MissingConstraints"/>

    <ImageView
            android:id="@+id/btn_capture_photo"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:src="@drawable/grey_rectangle"
            android:shadowColor="@color/yellow"
            android:shadowDx="90"
            android:shadowDy="90"
            android:shadowRadius="90"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_quiz" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/FAB_edit_picture" app:layout_constraintHorizontal_bias="0.495"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_username" tools:text="Obi-Wan Kenobi"
            android:textColor="@color/text_light_grey" android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" app:layout_constraintHorizontal_bias="0.17"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/btn_capture_photo"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_highscore" app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" app:layout_constraintHorizontal_bias="0.107"
            android:textSize="20sp" android:textColor="@color/text_light_grey" android:text="@string/highscore"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/textview_username"/>
    <TextView
            android:text="@string/last_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_last_score" app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" app:layout_constraintHorizontal_bias="0.1"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/btn_capture_photo"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_highscore"
            android:textSize="20sp" android:textColor="@color/text_light_grey"/>
    <TextView
            android:text="-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_highscore_result" android:textSize="20sp"
            android:textColor="@color/text_light_grey" app:layout_constraintStart_toEndOf="@+id/textView_highscore"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_username" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textview_last_score_result"
            app:layout_constraintVertical_bias="0.461"
            app:layout_constraintHorizontal_bias="0.078"/>
    <TextView
            android:text="-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_last_score_result" android:textSize="20sp"
            android:textColor="@color/text_light_grey" app:layout_constraintStart_toEndOf="@+id/textview_last_score"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_capture_photo"
            app:layout_constraintHorizontal_bias="0.084"/>
</android.support.constraint.ConstraintLayout>